--- a/frontend/src/pages/NotFoundPage.css
+++ b/frontend/src/pages/NotFoundPage.css
@@ -2,8 +2,38 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
-    width: 20rem;
+    width: 40rem;
     margin: auto;
     gap: 12px;
     align-items: center;
+    font-family: "Comic Sans MS";
+    font-size: xx-large;
+}
+
+.page404{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    width: 40rem;
+    margin: auto;
+    gap: 12px;
+    align-items: center;
+    font-family: "Comic Sans MS";
+    font-size: xxx-large;
+    font-weight: bold;
+}
+
+.button404{
+    text-decoration: none;
+    color: white;
+    font-size: medium;
+    display: flex;
+    justify-content: center;
+    border-style: solid;
+    border-radius: 20px;
+    border-color: rgba(87, 5, 20, 0.85);
+    background-color: #8c8eba;
+    margin: 30px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
