--- a/frontend/src/components/ColourChoice.css
+++ b/frontend/src/components/ColourChoice.css
@@ -1,10 +1,18 @@
 .colourChoiceButtons{
     display: flex;
+    padding: 15px;
     justify-content: space-between;
-    justify-items: auto;
     flex-direction: column;
-    width: 25px;
-    height: 25px;
-    margin: auto;
-    gap: 5px;
+    margin-left: 220px;
+    margin-top: 120px;
+    gap: 15px;
+    border: black inset 2px;
+    width: 50px;
+}
+
+.gameButtons{
+    min-width: 35px;
+    min-height: 35px;
+    max-width: 35px;
+    max-height: 35px;
 }
