--- a/frontend/src/pages/GamePage.css
+++ b/frontend/src/pages/GamePage.css
@@ -17,6 +17,7 @@
     border: black inset 2px;
     width: 50px;
     font-size: 16px;
+    margin-top: 150px;
 }
 
 .boxes{
@@ -33,4 +34,20 @@
     height: 56px;
     border: black inset 2px;
     font-size: 16px;
+}
+
+.hintBox{
+    display: flex;
+    justify-content: center;
+    width: 40px;
+    height: 38px;
+    border: black inset 2px;
+    margin-top: 20px;
+
+}
+
+.answer{
+    display: flex;
+    flex-direction: row;
+    column-gap: 15px;
 }
