--- a/frontend/src/pages/GamePage.css
+++ b/frontend/src/pages/GamePage.css
@@ -42,11 +42,24 @@
     width: 40px;
     height: 38px;
     border: black inset 2px;
-    margin-top: 20px;
+    margin-top: 13px;
 }
 
 .answer{
     display: flex;
     flex-direction: row;
     column-gap: 15px;
+}
+
+.checkButton{
+    display: flex;
+    justify-items: center;
+    width: 55px;
+    height: 28px;
+    border: black inset 2px;
+    border-radius: 12%;
+    margin-top: 30px;
+    background-color: #440044;
+    font-size: 13px;
+    color: white;
 }
